Working formula manipulation for R-G.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/multi-threaded@3836 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/rg-symbpredabsCPA-lbe.properties
+++ b/test/config/rg-symbpredabsCPA-lbe.properties
@@ -31,4 +31,6 @@ cpa.predicate.blk.loops     = true
 log.level = ALL
 log.fileExclude = SEVERE, FINE, FINEST, FINER
 
-#cpa.predicate.abstraction.initialPredicates = initial_pred
+cpa.predicate.predmap.export = true
+cpa.predicate.predmap.file = test/config/predmap.txt
+
