--- a/test/config/rg-symbpredabsCPA-sbe.properties
+++ b/test/config/rg-symbpredabsCPA-sbe.properties
@@ -17,7 +17,7 @@ cpa = cpa.art.ARTCPA
 
 ARTCPA.cpa = cpa.composite.CompositeCPA
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.PredicateCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.relyguarantee.RelyGuaranteeCPA
 
 # this automaton defines which locations are the error locations
 specification = test/config/automata/ErrorLocationAutomaton.txt
