Pretty-printing improved.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/multi-threaded@3873 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/rg-symbpredabsCPA-abe.properties
+++ b/test/config/rg-symbpredabsCPA-abe.properties
@@ -5,12 +5,13 @@
 # It is configured for the Large-Block Encoding (LBE) case.
 # ----------------------------------------------------------------------
 
-# only paths to possible error locations are analyzed
-#cfa.removeIrrelevantForErrorLocations = false
+# topsort is better than dfs if elements may be merged
+analysis.traversal.order = bfs
+analysis.traversal.useTopsort = true
 
-analysis.useRefinement = true
+#analysis.useRelyGuaranteeRefinement = true
 
-cegar.refiner = cpa.predicate.PredicateRefiner
+#rg-cegar.refiner = cpa.relyguarantee.PredicateRefiner
 
 # ARTCPA is necessary for refinement and has to be the top-level CPA
 cpa = cpa.art.ARTCPA
@@ -19,18 +20,22 @@ ARTCPA.cpa = cpa.composite.CompositeCPA
 
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.relyguarantee.RelyGuaranteeCPA
 
-# this automaton defines which locations are the error locations
+# this automaton
+ defines which locations are the error locations
 specification = test/config/automata/ErrorLocationAutomaton.txt
 
-cpa.predicate.abstraction.cartesian = true
-cpa.predicate.blk.threshold = 1
+cpa.predicate.blk.functions = true
+cpa.predicate.blk.loops     = true
 
 # logging
 log.level = ALL
 log.fileExclude = SEVERE, FINE, FINEST, FINER
 
-#cpa.predicate.abstraction.initialPredicates = ::g = 0
-#cpa.predicate.abstraction.initialPredicates = test/config/predmap.txt
-
 cpa.predicate.predmap.export = true
 cpa.predicate.predmap.file =   predmap.txt
+
+cpa.relyguarantee.blk.threshold = 10
+cpa.predicate.blk.functions = false
+cpa.predicate.blk.loops = false
+cpa.predicate.blk.requireThresholdAndLBE = false
+cpa.predicate.symbolicCoverageCheck = true
