--- a/test/config/rg-symbpredabsCPA-lbe.properties
+++ b/test/config/rg-symbpredabsCPA-lbe.properties
@@ -20,8 +20,7 @@ ARTCPA.cpa = cpa.composite.CompositeCPA
 
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.relyguarantee.RelyGuaranteeCPA
 
-# this automaton
- defines which locations are the error locations
+# this automaton defines which locations are the error locations
 specification = test/config/automata/ErrorLocationAutomaton.txt
 
 cpa.predicate.blk.functions = true
@@ -32,6 +31,6 @@ log.level = ALL
 log.fileExclude = SEVERE, FINE, FINEST, FINER
 
 cpa.predicate.predmap.export = true
-cpa.predicate.predmap.file = test/config/predmap.txt
+cpa.predicate.predmap.file = predmap.txt
 
  
