Commit before changes.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/multi-threaded@3876 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/rg-symbpredabsCPA-lbe.properties
+++ b/test/config/rg-symbpredabsCPA-lbe.properties
@@ -23,14 +23,14 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.re
 # this automaton defines which locations are the error locations
 specification = test/config/automata/ErrorLocationAutomaton.txt
 
-cpa.predicate.blk.functions = true
-cpa.predicate.blk.loops     = true
+cpa.relyguarantee.blk.functions = true
+cpa.relyguarantee.blk.loops     = true
 
 # logging
 log.level = ALL
 log.fileExclude = SEVERE, FINE, FINEST, FINER
 
-cpa.predicate.predmap.export = true
-cpa.predicate.predmap.file = predmap.txt
+cpa.relyguarantee.predmap.export = true
+cpa.relyguarantee.predmap.file = predmap.txt
 
  
