--- a/test/config/rg-symbpredabsCPA-sbe.properties
+++ b/test/config/rg-symbpredabsCPA-sbe.properties
@@ -23,7 +23,7 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.re
 specification = test/config/automata/ErrorLocationAutomaton.txt
 
 cpa.predicate.abstraction.cartesian = true
-cpa.predicate.blk.threshold = 1
+cpa.relyguarantee.blk.threshold = 1
 
 # logging
 log.level = ALL
@@ -32,5 +32,5 @@ log.fileExclude = SEVERE, FINE, FINEST, FINER
 #cpa.predicate.abstraction.initialPredicates = ::g = 0
 #cpa.predicate.abstraction.initialPredicates = test/config/predmap.txt
 
-cpa.predicate.predmap.export = true
-cpa.predicate.predmap.file =   predmap.txt
+cpa.relyguarantee.predmap.export = true
+cpa.relyguarantee.predmap.file =   predmap.txt
