--- a/test/config/rg-symbpredabsCPA-abe.properties
+++ b/test/config/rg-symbpredabsCPA-abe.properties
@@ -24,18 +24,17 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.re
  defines which locations are the error locations
 specification = test/config/automata/ErrorLocationAutomaton.txt
 
-cpa.predicate.blk.functions = true
-cpa.predicate.blk.loops     = true
 
 # logging
 log.level = ALL
 log.fileExclude = SEVERE, FINE, FINEST, FINER
 
-cpa.predicate.predmap.export = true
-cpa.predicate.predmap.file =   predmap.txt
+cpa.relyguarantee.predmap.export = true
+cpa.relyguarantee.predmap.file =   predmap.txt
 
-cpa.relyguarantee.blk.threshold = 1
-cpa.predicate.blk.functions = false
-cpa.predicate.blk.loops = false
-cpa.predicate.blk.requireThresholdAndLBE = false
-cpa.predicate.symbolicCoverageCheck = true
+# abe options
+cpa.relyguarantee.blk.threshold = 20
+cpa.relyguarantee.blk.functions = false
+cpa.relyguarantee.blk.loops = false
+cpa.relyguarantee.blk.requireThresholdAndLBE = false
+cpa.relyguarantee.symbolicCoverageCheck = true
