Some multi-threaded example add plus minor changes to the program.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/multi-threaded@3881 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/rg-symbpredabsCPA-abe.properties
+++ b/test/config/rg-symbpredabsCPA-abe.properties
@@ -33,8 +33,17 @@ cpa.relyguarantee.predmap.export = true
 cpa.relyguarantee.predmap.file =   predmap.txt
 
 # abe options
-cpa.relyguarantee.blk.threshold = 5
+cpa.relyguarantee.blk.threshold = 1
 cpa.relyguarantee.blk.functions = false
 cpa.relyguarantee.blk.loops = false
 cpa.relyguarantee.blk.requireThresholdAndLBE = false
 cpa.relyguarantee.symbolicCoverageCheck = true
+
+# global variables 
+# in cpa.predicate!
+cpa.predicate.globalVariables = g
+
+
+
+
+
