Bug with formula renaming has been fixed.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/multi-threaded@3883 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/rg-symbpredabsCPA-abe.properties
+++ b/test/config/rg-symbpredabsCPA-abe.properties
@@ -41,7 +41,7 @@ cpa.relyguarantee.symbolicCoverageCheck = true
 
 # global variables 
 # in cpa.predicate!
-cpa.predicate.globalVariables = g
+cpa.predicate.globalVariables = g, cs1, cs2
 
 
 
