Added filtering of non-global env edges.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/multi-threaded@3898 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/rg-symbpredabsCPA-abe.properties
+++ b/test/config/rg-symbpredabsCPA-abe.properties
@@ -33,7 +33,7 @@ cpa.relyguarantee.predmap.export = true
 cpa.relyguarantee.predmap.file =   predmap.txt
 
 # abe options
-cpa.relyguarantee.blk.threshold = 4
+cpa.relyguarantee.blk.threshold = 2
 cpa.relyguarantee.blk.functions = false
 cpa.relyguarantee.blk.loops = false
 cpa.relyguarantee.blk.requireThresholdAndLBE = false
@@ -41,7 +41,7 @@ cpa.relyguarantee.symbolicCoverageCheck = true
 
 # global variables 
 # in cpa.predicate!
-cpa.predicate.globalVariables = g, cs1, cs2
+cpa.relyguarantee.globalVariables = g, cs1, cs2
 
 
 
