--- a/test/config/rg-symbpredabsCPA-abe.properties
+++ b/test/config/rg-symbpredabsCPA-abe.properties
@@ -33,7 +33,8 @@ cpa.relyguarantee.predmap.export = true
 cpa.relyguarantee.predmap.file =   predmap.txt
 
 # abe options
-cpa.relyguarantee.blk.threshold = 10
+cpa.relyguarantee.blk.atomThreshold = 5
+cpa.relyguarantee.blk.threshold = 5
 cpa.relyguarantee.blk.functions = false
 cpa.relyguarantee.blk.loops = false
 cpa.relyguarantee.blk.requireThresholdAndLBE = false
