CPAchecker crashes when initial predicates are given in a file. Committing before reverting back MathsatFormulaManager and possible some others.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/multi-threaded@3905 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/rg-symbpredabsCPA-abe.properties
+++ b/test/config/rg-symbpredabsCPA-abe.properties
@@ -33,7 +33,7 @@ cpa.relyguarantee.predmap.export = true
 cpa.relyguarantee.predmap.file =   predmap.txt
 
 # abe options
-cpa.relyguarantee.blk.atomThreshold = 8
+cpa.relyguarantee.blk.atomThreshold = 1
 cpa.relyguarantee.blk.threshold = 5
 cpa.relyguarantee.blk.functions = false
 cpa.relyguarantee.blk.loops = false
@@ -41,10 +41,8 @@ cpa.relyguarantee.blk.requireThresholdAndLBE = false
 cpa.relyguarantee.symbolicCoverageCheck = true
 
 # global variables 
-# in cpa.predicate!
 cpa.relyguarantee.globalVariables = g, cs1, cs2
-
-
+cpa.relyguarantee.abstraction.initialPredicates = /home/pdaca/workspace/CPAchecker-multi-threaded/test/config/predmap.txt
 
 
 
