Reorganize the configuration files. The main change is the renaming symbpredabsCPA*.properties -> predicateAbstraction*.properties, but other files were renamed as well.
WARNING: If you use any of the configuration files supplied with CPAchecker,
you now will need to use the new name in your scripts / on the command line.



git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@3907 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/assumptions/explicitAnalysis-10s-timelimit.properties
+++ b/test/assumptions/explicitAnalysis-10s-timelimit.properties
@@ -1,7 +1,7 @@
 # ----------------------------------------------------------------------
 # This configuration file uses the Explicit Analysis CPA
 # with threshold 200000 (infinite for most cases)
-# It limits the analysis to 15 min and size of the reached set to 5000.
+# The analysis is limited to 10s.
 # ----------------------------------------------------------------------
 
 # only paths to possible error locations are analyzed
@@ -22,7 +22,5 @@ cpa.explicit.threshold = 200000
 # this automaton defines which locations are the error locations
 specification = test/config/automata/ErrorLocationAutomaton.txt
 
-ProgressObserverCPA.cpa.assumptions.progressobserver.heuristics = ReachedSizeHeuristics
-cpa.assumptions.progressobserver.heuristics.reachedSizeHeuristics.threshold = 5000
-
-output.disable = true
+ProgressObserverCPA.cpa.assumptions.progressobserver.heuristics = TimeOutHeuristics
+cpa.assumptions.progressobserver.heuristics.timeOutHeuristics.threshold = 10000
