--- a/test/assumptions/predicateAbstraction-lbe-automaton.properties
+++ b/test/assumptions/predicateAbstraction-lbe-automaton.properties
@@ -1,5 +1,10 @@
 # ----------------------------------------------------------------------
-# This configuration file uses symbpredabsCPA-lbe with output disabled
+# This configuration file uses the Adjustable-Block Encoding CPA
+# for predicate abstraction with CEGAR as described in
+# "Predicate Abstraction with Adjustable-Block Encoding" (Beyer et.al.).
+# It is configured for the Large-Block Encoding (LBE) case.
+# The searched state space is restricted by an assumption automaton.
+# Counterexamples are verified with CBMC.
 # ----------------------------------------------------------------------
 
 # topsort is better than dfs if elements may be merged
@@ -18,12 +23,10 @@ ARTCPA.cpa = cpa.composite.CompositeCPA
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.PredicateCPA
 
 # this automaton defines which locations are the error locations
-specification = test/config/automata/ErrorLocationAutomaton.txt
+specification = test/config/automata/ErrorLocationAutomaton-Assumptions.txt
 
 cpa.predicate.blk.functions = true
 cpa.predicate.blk.loops     = true
-
-output.disable = true
 
 analysis.useCBMC = true
 counterexample.continueAfterInfeasibleError = true
