--- a/test/config/CBMC.properties
+++ b/test/config/CBMC.properties
@@ -1,3 +1,8 @@
+# ----------------------------------------------------------------------
+# This configuration file uses CBMC as the analysis.
+# No analysis implemented in CPAchecker is used.
+# ----------------------------------------------------------------------
+
 analysis.externalCBMC = true
 
 cbmc.options.intWidth = 32
@@ -7,8 +12,5 @@ cbmc.options.nuaf = false
 
 #cbmc.timelimit = 3000
 
-analysis.entryFunction = main
-
 # reached set type must be set to NORMAL for external CBMC calls
 analysis.reachedSet = NORMAL
-output.disable = true
