--- a/test/assumptions/assumptionAutomaton.properties
+++ b/test/assumptions/assumptionAutomaton.properties
@@ -2,11 +2,9 @@
 # This configuration file uses restart analysis with two CPAs.
 # The first analysis is explicit and it generates an assumption guiding automaton when
 # it returns an unkown answer
-# the second algorithm is lbe that uses the automaton to prune state space 
+# The second algorithm is lbe that uses the automaton to prune state space.
 # ------------------------------------------------------------------
 
 analysis.restartAfterUnknown = true
 
-restartAlgorithm.configFiles = test/config/explicitAnalysis-assumptions.properties, test/config/symbpredabsCPA-lbe-automaton.properties
-
-output.disable=true
+restartAlgorithm.configFiles = test/assumptions/explicitAnalysis-assumptions.properties, test/assumptions/predicateAbstraction-lbe-automaton.properties
