--- a/test/config/predicateAbstraction-lbe-cbmc.properties
+++ b/test/config/predicateAbstraction-lbe-cbmc.properties
@@ -2,10 +2,8 @@
 # This configuration file uses the Adjustable-Block Encoding CPA
 # for predicate abstraction with CEGAR as described in
 # "Predicate Abstraction with Adjustable-Block Encoding" (Beyer et.al.).
-# It is configured for the Large-Block Encoding (LBE) case
-# (this is the default case).
-# This CPA is wrapped in another CPA that provides the possibility to
-# define limits (e.g. time limits) for specific operations.
+# It is configured for the Large-Block Encoding (LBE) case.
+# Counterexamples are verified with CBMC.
 # ----------------------------------------------------------------------
 
 # topsort is better than dfs if elements may be merged
@@ -21,9 +19,7 @@ cpa = cpa.art.ARTCPA
 
 ARTCPA.cpa = cpa.composite.CompositeCPA
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.monitor.MonitorCPA predabsMonitor
-
-predabsMonitor.cpa = cpa.predicate.PredicateCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.PredicateCPA
 
 # this automaton defines which locations are the error locations
 specification = test/config/automata/ErrorLocationAutomaton.txt
@@ -31,7 +27,6 @@ specification = test/config/automata/ErrorLocationAutomaton.txt
 cpa.predicate.blk.functions = true
 cpa.predicate.blk.loops     = true
 
-cpa.monitor.limit = 0
-cpa.monitor.pathcomputationlimit = 0
-cpa.monitor.pathlengthlimit = 0
-cpa.monitor.brancheslimit = 0
+analysis.useCBMC = true
+counterexample.continueAfterInfeasibleError = true
+
