explicitly set encoding for .java files
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@4066 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/build.xml
+++ b/build.xml
@@ -39,7 +39,7 @@
 
     <target depends="init" name="build-project">
         <echo message="${ant.project.name}: ${ant.file}"/>
-        <javac debug="true" debuglevel="${debuglevel}" destdir="bin" source="${source}" target="${target}">
+        <javac debug="true" debuglevel="${debuglevel}" destdir="bin" source="${source}" target="${target}" encoding="UTF-8">
             <src path="src"/>
 	    <exclude name="org/sosy_lab/cpachecker/cpaplugin/**"/>
             <classpath refid="CPAchecker.classpath"/>
