Added the option to gather more detailed cache miss statistics (disabled by default).
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@4095 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/predicateAbstraction-abm.properties
+++ b/test/config/predicateAbstraction-abm.properties
@@ -22,6 +22,7 @@ cpa.art.errorPath.export = false
 specification = test/config/automata/ErrorLocationAutomaton.txt
 
 cpa.abm.blockHeuristic = FunctionAndLoopPartitioning
+cpa.abm.gatherCacheMissStatistics = false
 
 cpa.predicate.blk.functions   = false
 cpa.predicate.blk.loops       = true
