Enable the output of an error path for BMC. This method for creating the path is equal to what we already have: ask the solver for a satisfying assignment that contains information about branches in the ART and use this to find the path in the ART.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@4214 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/bmc.properties
+++ b/test/config/bmc.properties
@@ -11,6 +11,11 @@ cpa.loopstack.maxLoopIterations = 1
 # disable bounding assertions (default is enabled)
 #bmc.boundingAssertions = false
 
+# ARTCPA is needed in order to create an error path for unsafe programs
+# Can be commented out if no error path information is needed.
+cpa = cpa.art.ARTCPA
+ARTCPA.cpa = cpa.composite.CompositeCPA
+
 
 # The rest of the options should not be changed.
 
