benchmarking files for uninit config
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@4230 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/uninitVars-heuristics.properties
+++ b/test/config/uninitVars-heuristics.properties
@@ -1,12 +1,6 @@
 analysis.useAssumptionCollector = true
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.types.TypesCPA, cpa.assumptions.storage.AssumptionStorageCPA, cpa.assumptions.progressobserver.ProgressObserverCPA, cpa.monitor.MonitorCPA uninitMonitor
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.types.TypesCPA, cpa.assumptions.storage.AssumptionStorageCPA, cpa.assumptions.progressobserver.ProgressObserverCPA, cpa.uninitvars.UninitializedVariablesCPA 
 
-uninitMonitor.cpa = cpa.uninitvars.UninitializedVariablesCPA
-
-cpa.assumptions.progressobserver.heuristics =
-
-cpa.monitor.limit = 0
-cpa.monitor.pathcomputationlimit = 0
-cpa.monitor.pathlengthlimit = 0
-cpa.monitor.brancheslimit = 0
+cpa.assumptions.progressobserver.heuristics = TimeOutHeuristics
+cpa.assumptions.progressobserver.heuristics.timeOutHeuristics.threshold = 10000
