some work on the implementation of Lazy Abstraction with Interpolants
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@4328 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/mcmillan.properties
+++ b/test/config/mcmillan.properties
@@ -5,8 +5,11 @@
 # THIS IS STILL EXPERIMENTAL AND NOT WORKING.
 # --------------------------------------------------------------------------
 
-# only paths to possible error locations are analyzed
-cfa.removeIrrelevantForErrorLocations = true
+# topsort is better than dfs if elements may be merged
+# callstack is necessary for inlining to work well
+analysis.traversal.order = bfs
+analysis.traversal.useTopsort = true
+analysis.traversal.useCallstack = true
 
 analysis.useRefinement = true
 
@@ -23,4 +26,7 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.pr
 specification = test/config/automata/ErrorLocationAutomaton.txt
 
 # abstraction after every post operation (similar to SBE)
-cpa.predicate.blocksize = 1
+cpa.predicate.blk.threshold = 1
+
+# don't split interpolants (this does not work with Lazy Abstraction)
+cpa.predicate.refinement.atomicPredicates=false
