--- a/test/config/predicateAnalysis.properties
+++ b/test/config/predicateAnalysis.properties
@@ -1,7 +1,7 @@
 # ----------------------------------------------------------------------
 # This configuration file uses the Adjustable-Block Encoding CPA
 # for predicate analysis with CEGAR as described in
-# "Predicate Abstraction with Adjustable-Block Encoding" (Beyer et.al.).
+# "Predicate Abstraction with Adjustable-Block Encoding" (Beyer et al.).
 # It is configured for abstractions at loop heads, similar to LBE but
 # with function inlining.
 # This configuration works best on most examples,
