update impact config files to use ABE configuration similar to predicateAnalysis
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@4372 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/impact-sbe.properties
+++ b/test/config/impact-sbe.properties
@@ -25,5 +25,5 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.im
 # this automaton defines which locations are the error locations
 specification = test/config/automata/ErrorLocationAutomaton.txt
 
-cpa.predicate.blk.functions = false
-cpa.predicate.blk.loops     = true
+# abstraction after every post operation (similar to SBE)
+cpa.predicate.blk.threshold = 1
