make block operator configuration more flexible
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@4501 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/bmc-induction.properties
+++ b/test/config/bmc-induction.properties
@@ -44,8 +44,8 @@ specification = test/config/automata/ErrorLocationAutomaton-BMC.txt
 cpa.predicate.blk.useCache = false
 
 # No abstractions
-cpa.predicate.blk.functions = false
-cpa.predicate.blk.loops     = false
+cpa.predicate.blk.alwaysAtFunctions = false
+cpa.predicate.blk.alwaysAtLoops     = false
 
 # No sat checks during formula creation
 cpa.predicate.targetStateSatCheck = false
