--- a/test/config/predicateAnalysis-lbe-cbmc.properties
+++ b/test/config/predicateAnalysis-lbe-cbmc.properties
@@ -24,8 +24,8 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.pr
 # this automaton defines which locations are the error locations
 specification = test/config/automata/ErrorLocationAutomaton.txt
 
-cpa.predicate.blk.functions = true
-cpa.predicate.blk.loops     = true
+cpa.predicate.blk.alwaysAtFunctions = true
+cpa.predicate.blk.alwaysAtLoops     = true
 
 analysis.useCBMC = true
 counterexample.continueAfterInfeasibleError = true
