--- a/test/config/predicateAnalysis-abm-auxiliaryPredicates.properties
+++ b/test/config/predicateAnalysis-abm-auxiliaryPredicates.properties
@@ -21,7 +21,7 @@ cpa.art.errorPath.export = false
 # this automaton defines which locations are the error locations
 specification = test/config/automata/ErrorLocationAutomaton.txt
 
-cpa.predicate.blk.functions   = false
-cpa.predicate.blk.loops       = true
+cpa.predicate.blk.alwaysAtFunctions = false
+cpa.predicate.blk.alwaysAtLoops     = true
 
 cpa.predicate.abm.auxiliaryPredicateComputer = true
