--- a/test/config/predicateAnalysis-abm.properties
+++ b/test/config/predicateAnalysis-abm.properties
@@ -24,7 +24,7 @@ specification = test/config/automata/ErrorLocationAutomaton.txt
 cpa.abm.blockHeuristic = FunctionAndLoopPartitioning
 cpa.abm.gatherCacheMissStatistics = false
 
-cpa.predicate.blk.functions   = false
-cpa.predicate.blk.loops       = true
+cpa.predicate.blk.alwaysAtFunctions = false
+cpa.predicate.blk.alwaysAtLoops     = true
 
 cpa.predicate.abm.auxiliaryPredicateComputer = false
