--- a/test/config/predicateAnalysis.properties
+++ b/test/config/predicateAnalysis.properties
@@ -28,5 +28,5 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.pr
 # this automaton defines which locations are the error locations
 specification = test/config/automata/ErrorLocationAutomaton.txt
 
-cpa.predicate.blk.functions = false
-cpa.predicate.blk.loops     = true
+cpa.predicate.blk.alwaysAtFunctions = false
+cpa.predicate.blk.alwaysAtLoops     = true
