--- a/test/config/explicitAnalysis.properties
+++ b/test/config/explicitAnalysis.properties
@@ -5,7 +5,7 @@
 # ------------------------------------------------------------------
 
 # only paths to possible error locations are analyzed
-cfa.removeIrrelevantForErrorLocations = true
+cfa.removeIrrelevantForErrorLocations = false
 
 analysis.useCBMC = true
 counterexample.continueAfterInfeasibleError = true
