--- a/test/config/sv-comp12.properties
+++ b/test/config/sv-comp12.properties
@@ -21,7 +21,10 @@ cegar.refiner = cpa.predicate.PredicateRefiner
 # ARTCPA is necessary for refinement and has to be the top-level CPA
 cpa = cpa.art.ARTCPA
 
-ARTCPA.cpa = cpa.composite.CompositeCPA
+# FunctionPointerCPA tracks function pointers and converts them to regular function calls
+ARTCPA.cpa = cpa.functionpointer.FunctionPointerCPA
+
+FunctionPointerCPA.cpa = cpa.composite.CompositeCPA
 
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.PredicateCPA
 
