--- a/test/config/sv-comp12-abm-funpoint.properties
+++ b/test/config/sv-comp12-abm-funpoint.properties
@@ -12,7 +12,10 @@ cegar.refiner = cpa.predicate.ABMPredicateRefiner
 cpa = cpa.abm.ABMCPA
 ABMCPA.cpa = cpa.art.ARTCPA
 
-ARTCPA.cpa = cpa.composite.CompositeCPA
+# FunctionPointerCPA tracks function pointers and converts them to regular function calls
+ARTCPA.cpa = cpa.functionpointer.FunctionPointerCPA
+
+FunctionPointerCPA.cpa = cpa.composite.CompositeCPA
 
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.ABMPredicateCPA
 
