--- a/.classpath
+++ b/.classpath
@@ -6,19 +6,20 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="bin/"/>
-	<classpathentry exported="true" kind="lib" path="lib/guava-10.0.jar"/>
-	<classpathentry kind="lib" path="lib/javabdd-1.0b2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/ivy/runtime/guava.jar" sourcepath="lib/ivy-contrib/guava-sources.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/runtime/jsr305.jar"/>
+        <classpathentry kind="lib" path="lib/javabdd-1.0b2.jar"/>
 	<classpathentry kind="lib" path="lib/java-cup-11a.jar"/>
 	<classpathentry kind="lib" path="lib/yicesapijava.jar"/>
-	<classpathentry kind="lib" path="lib/eclipse/icu4j-4_2_1.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/runtime/icu4j.jar"/>
 	<classpathentry kind="lib" path="lib/jgrapht-jdk1.6.jar"/>
 	<classpathentry kind="lib" path="lib/eclipse/org.eclipse.cdt.core_5.2.1.201102110609.jar" sourcepath="/Eclipse CDT core"/>
 	<classpathentry kind="lib" path="lib/eclipse/org.eclipse.core.resources_3.6.1.R36x_v20110131-1630.jar"/>
 	<classpathentry kind="lib" path="lib/eclipse/org.eclipse.equinox.common_3.6.0.v20100503.jar"/>
 	<classpathentry kind="lib" path="lib/eclipse/org.eclipse.osgi_3.6.2.R36x_v20110210.jar"/>
-	<classpathentry kind="lib" path="lib/build-only/junit.jar"/>
-	<classpathentry kind="lib" path="lib/build-only/org.hamcrest.core_1.1.0.v20090501071000.jar"/>
-	<classpathentry kind="lib" path="lib/json_simple-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/test/junit.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/test/hamcrest-core.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/runtime/json-simple.jar" sourcepath="lib/ivy-contrib/json-simple-sources.jar"/>
 	<classpathentry kind="lib" path="lib/eclipse-cdt6-parser.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
