--- a/build.xml
+++ b/build.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project basedir="." default="build" name="CPAchecker">
+<project basedir="." default="build" name="CPAchecker" xmlns:ivy="antlib:org.apache.ivy.ant">
     <property environment="env"/>
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.6"/>
     <property name="source" value="1.6"/>
+    <antversion property="ant.version.exact"/> <!-- Define property that contains the Ant version. -->
+	
     <path id="CPAchecker.classpath">
         <pathelement location="bin"/>
-        <fileset dir="lib" includes="**/*.jar"/>
+        <fileset dir="lib" includes="eclipse/*.jar"/>
+        <fileset dir="lib" includes="ivy/runtime/*.jar"/>
+        <fileset dir="lib" includes="ivy/test/*.jar"/>
+        <fileset dir="lib" includes="*.jar"/>
     </path>
     <condition property="architecture" value="x86_64" else="x86">
         <os arch="amd64"/>
@@ -29,7 +34,48 @@
         <delete dir="bin"/>
     </target>
     <target depends="clean" name="cleanall"/>
-    <target depends="build-subprojects,build-project,build-documentation" name="build"/>
+	
+    <property name="ivy.version" value="2.2.0"/> <!-- Change version number here to use a newer version of Ivy for bootstrapping -->
+    <property name="ivy.lib.dir" value="${basedir}/lib/ivy"/>
+    <property name="ivy.jar.dir" value="${ivy.lib.dir}/build"/>
+    <property name="ivy.jar.file" value="ivy.jar"/>
+    <available file="${ivy.jar.dir}/${ivy.jar.file}" property="ivy.jar.present"/>
+    <available file="${ivy.lib.dir}-contrib" property="ivy.contrib.present"/>
+	
+    <!-- If necessary, download Ivy from web site so that it does not need to be installed. -->
+    <target name="bootstrap-ivy" unless="ivy.jar.present">
+    	<mkdir dir="${ivy.jar.dir}"/>
+    	<echo message="Downloading ivy..."/>
+        <get src="http://repo1.maven.org/maven2/org/apache/ivy/ivy/${ivy.version}/ivy-${ivy.version}.jar" dest="${ivy.jar.dir}/${ivy.jar.file}" usetimestamp="true"/>
+    </target>
+
+    <!-- Load the Ivy plugin for Ant so the Ivy tasks are available. -->
+    <target name="load-ivy" depends="bootstrap-ivy">
+    	<path id="ivy.lib.path">
+    	    <fileset dir="${ivy.jar.dir}" includes="${ivy.jar.file}"/>
+    	</path>
+    	<taskdef resource="org/apache/ivy/ant/antlib.xml" uri="antlib:org.apache.ivy.ant" classpathref="ivy.lib.path"/>
+    </target>
+	
+    <!-- Ask Ivy to get all the dependencies for us -->
+    <target name="resolve-dependencies" depends="load-ivy, update-contrib">
+        <echo message="Downloading and installing dependencies with Ivy..."/>
+        <ivy:resolve conf="build, runtime, test"/>
+        <ivy:retrieve sync="true" overwriteMode="different" pattern="${ivy.lib.dir}/[conf]/[artifact](-[classifier]).[ext]"/>
+    </target>
+
+    <!-- Update additional resources if they were downloaded previously. -->
+    <target name="update-contrib" if="ivy.contrib.present">
+        <antcall target="contrib"/>
+    </target>
+        
+    <target name="contrib" depends="load-ivy" description="retrieve sources and docs for external libraries">
+        <ivy:resolve conf="contrib"/>
+        <ivy:retrieve sync="true" pattern="${ivy.lib.dir}-contrib/[artifact](-[classifier]).[ext]"/>
+    </target>
+        	
+    <target depends="resolve-dependencies,build-subprojects,build-project,build-documentation" name="build"/>
+    
     <target name="build-subprojects">
 	    <echo message="Generate automaton parser if necessary" level="info"/>
 	    <ant antfile="src/org/sosy_lab/cpachecker/cpa/automaton/AutomatonBuild.xml" inheritAll="false"/>
@@ -70,7 +116,17 @@
         <echo message="Options collected." level="info"/>
     </target>
 
-    <target description="Run all JUnit tests" depends="build" name="tests">
+    <!-- Load the JUnit plugin for Ant if it's not installed. -->
+    <condition property="ant.junit.available">
+        <typefound name="junit"/>
+    </condition>
+    <target name="load-junit" depends="resolve-dependencies" unless="ant.junit.available">
+    	<taskdef name="junit"
+    	         classname="org.apache.tools.ant.taskdefs.optional.junit.JUnitTask"
+    	         classpath="${ivy.jar.dir}/ant-junit.jar"/>
+    </target>
+        
+    <target description="Run all JUnit tests" depends="build, load-junit" name="tests">
         <property name="test.report.dir" value="test/output"/>
         <mkdir dir="${test.report.dir}"/>
         <junit fork="true" printSummary="true" showOutput="false">
