--- a/build.properties
+++ b/build.properties
@@ -3,6 +3,5 @@ bin.includes = META-INF/,\
                .,\
                lib/
 source.. = src/
-bin.excludes = lib/build-only/,\
-               lib/eclipse/,\
+bin.excludes = lib/eclipse/,\
                lib/native/
