--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project basedir="." default="build" name="CPAchecker">
+    <property name="version" value="trunk"/> <!-- change here for a release -->
+	
     <property environment="env"/>
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.6"/>
@@ -68,6 +70,24 @@
             <!-- <arg value="-v"/> -->
         </java>
         <echo message="Options collected." level="info"/>
+    </target>
+	
+    <target description="Make a distributable release" depends="build,jar,zip" name="dist"/>
+	
+    <target name="jar" depends="build">
+	<jar basedir="bin/" includes="**/*.class" destfile="cpachecker.jar"
+		whenmanifestonly="fail">
+	    <manifest>
+	    	<attribute name="Implementation-Title" value="CPAchecker"/>
+	    	<attribute name="Implementation-Version" value="${version}"/>
+	    	<attribute name="Implementation-URL" value="http://cpachecker.sosy-lab.org"/>
+		<attribute name="Main-Class" value="org.sosy_lab.cpachecker.cmdline.CPAMain"/>
+	     </manifest>
+	</jar>
+    </target>
+	
+    <target name="zip" depends="jar">
+    	<!-- TODO make a zip file will all the relevant content -->
     </target>
 
     <target description="Run all JUnit tests" depends="build" name="tests">
