re-enable CFA pruning for explicit analysis configurations because it's fixed now
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@4606 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/octagonAnalysis.properties
+++ b/test/config/octagonAnalysis.properties
@@ -1,4 +1,4 @@
-cfa.removeIrrelevantForErrorLocations = false
+cfa.removeIrrelevantForErrorLocations = true
 
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.octagon.OctagonCPA
 
