--- a/test/config/explicitAnalysis-featureVars.properties
+++ b/test/config/explicitAnalysis-featureVars.properties
@@ -4,7 +4,7 @@
 # Certain variables (__SELECTED_FEATURE_*) are instead tracked with BDDs.
 # Found errors are cross-checked by CBMC.
 # ------------------------------------------------------------------
-cfa.removeIrrelevantForErrorLocations = false
+cfa.removeIrrelevantForErrorLocations = true
 
 cpa = cpa.art.ARTCPA
 ARTCPA.cpa = cpa.composite.CompositeCPA
