move the description on how to build CPAchecker from source from INSTALL.txt to BUILD.txt and put a description for users that downloaded a binary release into INSTALL.txt
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@4655 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/build.xml
+++ b/build.xml
@@ -90,7 +90,7 @@
 	
     <target name="zip" depends="jar">
         <zip destfile="CPAchecker-${version}.zip" whenempty="fail">
-	    <fileset dir="." includes="doc/** scripts/** cpachecker.jar *.txt" excludes="INSTALL.txt"/>
+	    <fileset dir="." includes="doc/** scripts/** cpachecker.jar *.txt" excludes="BUILD.txt"/>
 	    <fileset dir="." includes="lib/**" excludes="lib/build-only/** lib/native/source/**"/>
 	</zip>
     </target>
