Move the most important configuration files from test/config/ to config/. Move the most important specification files from test/config/automata/ to config/specification/ and gave them better file names.
This should make these files more discoverable for users.
If you specify a command-line option like "-predicateAnalysis",
CPAchecker will now look in the config/ directory for the relevant files.
So if you used this with your own configuration files, you should also move them to the new directory.

For now only those files remain in the two directories under test/
which are only relevant for (unit) tests and are not meant to be used directly by users.


git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@4665 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/bmc-induction.properties
+++ b/config/bmc-induction.properties
@@ -16,7 +16,7 @@ cpa.predicate.mathsat.useIntegers = true
 bmc.induction = true
 
 # config file for invariant generation for induction
-bmc.invariantGenerationConfigFile = test/config/invariantGeneration.properties
+bmc.invariantGenerationConfigFile = config/invariantGeneration.properties
 
 # generate invariants in parallel to the BMC analysis (default is false)
 #bmc.parallelInvariantGeneration = true
@@ -38,7 +38,7 @@ ARTCPA.cpa = cpa.composite.CompositeCPA
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.PredicateCPA, cpa.assumptions.storage.AssumptionStorageCPA, cpa.loopstack.LoopstackCPA
 
 # this automaton defines which locations are the error locations
-specification = test/config/automata/ErrorLocationAutomaton-BMC.txt
+specification = config/specification/ErrorLocation-BMC.spc
 
 # No caching, the formulas are never created twice
 cpa.predicate.blk.useCache = false
