--- a/config/bmc.properties
+++ b/config/bmc.properties
@@ -29,7 +29,7 @@ analysis.useBMC = true
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.PredicateCPA, cpa.assumptions.storage.AssumptionStorageCPA, cpa.loopstack.LoopstackCPA
 
 # this automaton defines which locations are the error locations
-specification = test/config/automata/ErrorLocationAutomaton-BMC.txt
+specification = config/specification/ErrorLocation-BMC.spc
 
 # No caching, the formulas are never created twice
 cpa.predicate.blk.useCache = false
