--- a/config/explicitAnalysis-featureVars.properties
+++ b/config/explicitAnalysis-featureVars.properties
@@ -24,4 +24,4 @@ cpa.featurevars.variableWhitelist = __SELECTED_FEATURE_(\\w)*
 cpa.explicit.variableBlacklist = (\\w)*__SELECTED_FEATURE_(\\w)*
 
 # this automaton defines which locations are the error locations
-specification = test/config/automata/FeatureVarsErrorLocationAutomaton.txt
+specification = config/specification/FeatureVarsErrorLocation.spc
