--- a/config/impact-sbe.properties
+++ b/config/impact-sbe.properties
@@ -1,7 +1,7 @@
 # --------------------------------------------------------------------------
-# This configuration file uses the Adjustable-Block Encoding CPA
-# for predicate abstraction with CEGAR with some changes to simulate
-# the analysis described in "Lazy Abstraction with Interpolants" (McMillan).
+# This configuration file uses the ImpactCPA which implements the abstract
+# domain of the tool Impact from McMillan, which was presented in the paper
+# "Lazy Abstraction with Interpolants"
 # THIS IS STILL EXPERIMENTAL AND NOT WORKING.
 # --------------------------------------------------------------------------
 
@@ -13,20 +13,17 @@ analysis.traversal.useCallstack = true
 
 analysis.useRefinement = true
 
-cegar.refiner = cpa.predicate.McMillanRefiner
+cegar.refiner = cpa.impact.ImpactRefiner
 
 # ARTCPA is necessary for refinement and has to be the top-level CPA
 cpa = cpa.art.ARTCPA
 
 ARTCPA.cpa = cpa.composite.CompositeCPA
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.PredicateCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.impact.ImpactCPA
 
 # this automaton defines which locations are the error locations
-specification = test/config/automata/ErrorLocationAutomaton.txt
+specification = config/specification/ErrorLocation.spc
 
 # abstraction after every post operation (similar to SBE)
 cpa.predicate.blk.threshold = 1
-
-# don't split interpolants (this does not work with Lazy Abstraction)
-cpa.predicate.refinement.atomicPredicates=false
