--- a/config/impact.properties
+++ b/config/impact.properties
@@ -23,7 +23,7 @@ ARTCPA.cpa = cpa.composite.CompositeCPA
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.impact.ImpactCPA
 
 # this automaton defines which locations are the error locations
-specification = test/config/automata/ErrorLocationAutomaton.txt
+specification = config/specification/ErrorLocation.spc
 
-# abstraction after every post operation (similar to SBE)
-cpa.predicate.blk.threshold = 1
+cpa.predicate.blk.alwaysAtFunctions = false
+cpa.predicate.blk.alwaysAtLoops     = true
