--- a/config/intervalAnalysis-join.properties
+++ b/config/intervalAnalysis-join.properties
@@ -11,7 +11,7 @@ cpa.interval.threshold = 2000
 cpa.interval.merge = join
 
 # this automaton defines which locations are the error locations
-specification = test/config/automata/ErrorLocationAutomaton.txt
+specification = config/specification/ErrorLocation.spc
 
 #log.level = ALL
 #log.consoleLevel = ALL
