--- a/config/intervalAnalysis.properties
+++ b/config/intervalAnalysis.properties
@@ -5,8 +5,8 @@ ARTCPA.cpa = cpa.composite.CompositeCPA
 
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.interval.IntervalAnalysisCPA
 
-analysis.useCBMC = true
-counterexample.continueAfterInfeasibleError = true
+#analysis.useCBMC = true
+#counterexample.continueAfterInfeasibleError = true
 
 # topsort is better than dfs if elements may be merged
 #analysis.traversal.order = bfs
@@ -17,7 +17,7 @@ counterexample.continueAfterInfeasibleError = true
 cpa.interval.threshold = 2000
 
 # this automaton defines which locations are the error locations
-specification = test/config/automata/ErrorLocationAutomaton.txt
+specification = config/specification/ErrorLocation.spc
 
 #log.level = ALL
 #log.consoleLevel = ALL
