--- a/config/pointerAnalysis-no-cbmc.properties
+++ b/config/pointerAnalysis-no-cbmc.properties
@@ -3,4 +3,4 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.ty
 cpa.explicit.threshold = 10
 
 # this automaton defines which locations are the error locations
-specification = test/config/automata/ErrorLocationAutomaton.txt
+specification = config/specification/ErrorLocation.spc
