--- a/config/predicateAnalysis-abm.properties
+++ b/config/predicateAnalysis-abm.properties
@@ -19,9 +19,12 @@ cpa.art.export = false
 cpa.art.errorPath.export = false
 
 # this automaton defines which locations are the error locations
-specification = test/config/automata/ErrorLocationAutomaton.txt
+specification = config/specification/ErrrorLocation.spc
+
+cpa.abm.blockHeuristic = FunctionAndLoopPartitioning
+cpa.abm.gatherCacheMissStatistics = false
 
 cpa.predicate.blk.alwaysAtFunctions = false
 cpa.predicate.blk.alwaysAtLoops     = true
 
-cpa.predicate.abm.auxiliaryPredicateComputer = true
+cpa.predicate.abm.auxiliaryPredicateComputer = false
