--- a/test/assumptions/explicitAnalysis-10s-timelimit.properties
+++ b/test/assumptions/explicitAnalysis-10s-timelimit.properties
@@ -20,7 +20,7 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.as
 cpa.explicit.threshold = 200000
 
 # this automaton defines which locations are the error locations
-specification = test/config/automata/ErrorLocationAutomaton.txt
+specification = config/specification/ErrorLocation.spc
 
 ProgressObserverCPA.cpa.assumptions.progressobserver.heuristics = TimeOutHeuristics
 cpa.assumptions.progressobserver.heuristics.timeOutHeuristics.threshold = 10000
