--- a/test/assumptions/predicate-adjustableConditions.properties
+++ b/test/assumptions/predicate-adjustableConditions.properties
@@ -17,7 +17,7 @@ cpa.assumptions.progressobserver.heuristics.timeOutHeuristics.threshold = 60000
 #cpa.assumptions.progressobserver.heuristics.timeOutHeuristics.hardLimitThreshold = 180000
 
 # this automaton defines which locations are the error locations
-specification = test/config/automata/ErrorLocationAutomaton.txt
+specification = config/specification/ErrorLocation.spc
 
 cpa.predicate.blk.functions = true
 cpa.predicate.blk.loops     = true
