--- a/config/explicitAnalysis.properties
+++ b/config/explicitAnalysis.properties
@@ -1,20 +1,20 @@
 # ------------------------------------------------------------------
 # This configuration file uses explicit analysis of local integer
-# variables in a data-flow analysis configuration.
+# variables in a model-checking configuration.
+# Found errors are cross-checked by CBMC.
 # ------------------------------------------------------------------
 
 # only paths to possible error locations are analyzed
 cfa.removeIrrelevantForErrorLocations = true
 
-# topsort is better than dfs if elements may be merged
-analysis.traversal.order = bfs
-analysis.traversal.useTopsort = true
+analysis.useCBMC = true
+counterexample.continueAfterInfeasibleError = true
 
+cpa = cpa.art.ARTCPA
+ARTCPA.cpa = cpa.composite.CompositeCPA
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.explicit.ExplicitCPA
 
-cpa.explicit.merge = join
-
-cpa.explicit.threshold = 2000
+cpa.explicit.threshold = 200000
 
 # this automaton defines which locations are the error locations
-specification = test/config/automata/ErrorLocationAutomaton.txt
+specification = config/specification/ErrorLocation.spc
