--- a/config/octagonAnalysis.properties
+++ b/config/octagonAnalysis.properties
@@ -3,4 +3,4 @@ cfa.removeIrrelevantForErrorLocations = true
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.octagon.OctagonCPA
 
 # this automaton defines which locations are the error locations
-specification = test/config/automata/ErrorLocationAutomaton.txt
+specification = config/specification/ErrorLocation.spc
