--- a/config/predicateAnalysis-abm-auxiliaryPredicates.properties
+++ b/config/predicateAnalysis-abm-auxiliaryPredicates.properties
@@ -1,5 +1,4 @@
 # topsort is better than dfs if elements may be merged
-# callstack is necessary for inlining to work well
 analysis.traversal.order = bfs
 analysis.traversal.useTopsort = true
 analysis.traversal.useCallstack = true
@@ -16,21 +15,13 @@ ARTCPA.cpa = cpa.composite.CompositeCPA
 
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.ABMPredicateCPA
 
+cpa.art.export = false
+cpa.art.errorPath.export = false
+
 # this automaton defines which locations are the error locations
-specification = test/config/automata/sv-comp.spc
+specification = config/specification/ErrorLocation.spc
 
-# ABM settings
-cpa.predicate.abm.auxiliaryPredicateComputer = false
-cpa.abm.blockHeuristic = FunctionAndLoopPartitioning
-cpa.abm.gatherCacheMissStatistics = false
-
-# Use ABE with abstractions at loops
 cpa.predicate.blk.alwaysAtFunctions = false
 cpa.predicate.blk.alwaysAtLoops     = true
 
-# Ignore all casts already in the parsing step
-parser.ignoreCasts = true
-
-# Disable all output files except the error path
-output.disable=true
-cpa.art.errorPath.file = ErrorPath.txt
+cpa.predicate.abm.auxiliaryPredicateComputer = true
