--- a/config/predicateAnalysis-lbe.properties
+++ b/config/predicateAnalysis-lbe.properties
@@ -2,17 +2,12 @@
 # This configuration file uses the Adjustable-Block Encoding CPA
 # for predicate analysis with CEGAR as described in
 # "Predicate Abstraction with Adjustable-Block Encoding" (Beyer et al.).
-# It is configured for abstractions at loop heads, similar to LBE but
-# with function inlining.
-# This configuration works best on most examples,
-# but may have memory problems on really big programs.
+# It is configured for the Large-Block Encoding (LBE) case.
 # ----------------------------------------------------------------------
 
 # topsort is better than dfs if elements may be merged
-# callstack is necessary for inlining to work well
 analysis.traversal.order = bfs
 analysis.traversal.useTopsort = true
-analysis.traversal.useCallstack = true
 
 analysis.useRefinement = true
 
@@ -26,7 +21,7 @@ ARTCPA.cpa = cpa.composite.CompositeCPA
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.PredicateCPA
 
 # this automaton defines which locations are the error locations
-specification = test/config/automata/ErrorLocationAutomaton.txt
+specification = config/specification/ErrorLocation.spc
 
-cpa.predicate.blk.alwaysAtFunctions = false
+cpa.predicate.blk.alwaysAtFunctions = true
 cpa.predicate.blk.alwaysAtLoops     = true
