--- a/config/predicateAnalysis-sbe.properties
+++ b/config/predicateAnalysis-sbe.properties
@@ -2,13 +2,11 @@
 # This configuration file uses the Adjustable-Block Encoding CPA
 # for predicate analysis with CEGAR as described in
 # "Predicate Abstraction with Adjustable-Block Encoding" (Beyer et.al.).
-# It is configured for the Large-Block Encoding (LBE) case.
-# Counterexamples are verified with CBMC.
+# It is configured for the Single-Block Encoding (SBE) case.
 # ----------------------------------------------------------------------
 
-# topsort is better than dfs if elements may be merged
-analysis.traversal.order = bfs
-analysis.traversal.useTopsort = true
+# only paths to possible error locations are analyzed
+cfa.removeIrrelevantForErrorLocations = true
 
 analysis.useRefinement = true
 
@@ -22,11 +20,7 @@ ARTCPA.cpa = cpa.composite.CompositeCPA
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.PredicateCPA
 
 # this automaton defines which locations are the error locations
-specification = test/config/automata/ErrorLocationAutomaton.txt
+specification = config/specification/ErrorLocation.spc
 
-cpa.predicate.blk.alwaysAtFunctions = true
-cpa.predicate.blk.alwaysAtLoops     = true
-
-analysis.useCBMC = true
-counterexample.continueAfterInfeasibleError = true
-
+cpa.predicate.abstraction.cartesian = true
+cpa.predicate.blk.threshold = 1
