--- a/config/sv-comp12-abm.properties
+++ b/config/sv-comp12-abm.properties
@@ -1,4 +1,5 @@
 # topsort is better than dfs if elements may be merged
+# callstack is necessary for inlining to work well
 analysis.traversal.order = bfs
 analysis.traversal.useTopsort = true
 analysis.traversal.useCallstack = true
@@ -15,16 +16,21 @@ ARTCPA.cpa = cpa.composite.CompositeCPA
 
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.ABMPredicateCPA
 
-cpa.art.export = false
-cpa.art.errorPath.export = false
-
 # this automaton defines which locations are the error locations
-specification = test/config/automata/ErrorLocationAutomaton.txt
+specification = config/specification/sv-comp.spc
 
+# ABM settings
+cpa.predicate.abm.auxiliaryPredicateComputer = false
 cpa.abm.blockHeuristic = FunctionAndLoopPartitioning
 cpa.abm.gatherCacheMissStatistics = false
 
+# Use ABE with abstractions at loops
 cpa.predicate.blk.alwaysAtFunctions = false
 cpa.predicate.blk.alwaysAtLoops     = true
 
-cpa.predicate.abm.auxiliaryPredicateComputer = false
+# Ignore all casts already in the parsing step
+parser.ignoreCasts = true
+
+# Disable all output files except the error path
+output.disable=true
+cpa.art.errorPath.file = ErrorPath.txt
