--- a/test/assumptions/explicit-adjustableConditions.properties
+++ b/test/assumptions/explicit-adjustableConditions.properties
@@ -20,4 +20,4 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.as
 cpa.explicit.threshold = 200000
 
 # this automaton defines which locations are the error locations
-specification = test/config/automata/ErrorLocationAutomaton.txt
+specification = config/specification/ErrorLocation.spc
