--- a/test/assumptions/explicitAnalysis-assumptions.properties
+++ b/test/assumptions/explicitAnalysis-assumptions.properties
@@ -21,6 +21,6 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.ex
 cpa.explicit.threshold = 200000
 
 # this automaton defines which locations are the error locations
-specification = test/config/automata/ErrorLocationAutomaton.txt
+specification = config/specification/ErrorLocation.spc
 
 assumptions.automatonFile = AssumptionAutomaton.txt
