Move default output directory of CPAchecker from test/output/ to output/.
When a user runs CPAchecker, the results of CPAchecker have nothing to do with "test"s.


git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@4666 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/build.xml
+++ b/build.xml
@@ -96,7 +96,7 @@
     </target>
 
     <target description="Run all JUnit tests" depends="build" name="tests">
-        <property name="test.report.dir" value="test/output"/>
+        <property name="test.report.dir" value="output"/>
         <mkdir dir="${test.report.dir}"/>
         <junit fork="true" printSummary="true" showOutput="false">
             <assertions>
