remove obsolete reference to CONTRIB.txt in build.xml
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@4684 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/build.xml
+++ b/build.xml
@@ -90,7 +90,7 @@
 	
     <target name="zip" depends="jar">
         <zip destfile="CPAchecker-${version}.zip" whenempty="fail">
-	    <fileset dir="." includes="config/** doc/** scripts/** cpachecker.jar *.txt" excludes="CONTRIB.txt"/>
+	    <fileset dir="." includes="config/** doc/** scripts/** cpachecker.jar *.txt"/>
 	    <fileset dir="." includes="lib/**" excludes="lib/build-only/** lib/native/source/**"/>
 	</zip>
     </target>
