Ant task for generating ivy reports. These are reports nicely listing all dependencies as an HTML page and as graphs
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/ivy@4753 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/build.xml
+++ b/build.xml
@@ -64,6 +64,10 @@
         <ivy:retrieve sync="true" overwriteMode="different" pattern="${ivy.lib.dir}/[conf]/[artifact](-[classifier]).[ext]"/>
     </target>
 
+    <target name="report-dependencies" depends="resolve-dependencies" description="Generate dependencies report">
+        <ivy:report graph="false" dot="true" conf="runtime, build, test, contrib"/>
+    </target>
+
     <!-- Update additional resources if they were downloaded previously. -->
     <target name="update-contrib" if="ivy.contrib.present">
         <antcall target="contrib"/>
