Changed default values for predicate analysis.
- casts are ignored by the parser (even though is probably not
  necessary, it avoids possible problems and comes at no cost)
- activated pointer aliasing in the predicate analysis by default.

git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@4788 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/predicateAnalysis.properties
+++ b/config/predicateAnalysis.properties
@@ -30,3 +30,5 @@ specification = config/specification/ErrorLocation.spc
 
 cpa.predicate.blk.alwaysAtFunctions = false
 cpa.predicate.blk.alwaysAtLoops     = true
+
+parser.ignoreCasts = true
